--- a/app/src/main/res/drawable/background_dark.xml
+++ b/app/src/main/res/drawable/background_dark.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:shape="rectangle">
+    <gradient
+            android:angle="270"
+            android:endColor="#232526"
+            android:startColor="#414345"
+            android:type="linear"/>
+    <size
+            android:height="1336dp"
+            android:width="750dp"/>
+</shape>
