feat(splash-screen): create layout splash screen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,13 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background_dark"
+        android:background="@color/backgroundSplash"
         tools:context=".activities.SearchPageActivity">
 
     <ImageView
             android:id="@+id/splash_image"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             tools:layout_editor_absoluteX="0"
             tools:layout_editor_absoluteY="0"
             app:layout_constrainedWidth="true"
@@ -32,9 +32,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:paddingTop="24dp"
-                android:textSize="28dp"
-                android:text="My Profile"
+                android:paddingTop="10dp"
+                android:text="Movie Guide"
+                style="@style/TxtDefaultHeading"
+                android:textSize="24dp"
+                android:textColor="@color/backgroundPrimary"
         />
     </LinearLayout>
 
