--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#EC407A</color>
-    <color name="colorPrimaryDark">#F48FB1</color>
+    <color name="colorPrimaryDark">#EC407A</color>
     <color name="colorAccent">#9C27B0</color>
     <color name="backgroundPrimary">#f5f5f5</color>
+    <color name="backgroundSplash">#414345</color>
 </resources>
