--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -3,7 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context=".listing.MoviesListingActivity">
+              tools:context=".app.activity.MoviesListingActivity">
 
     <include layout="@layout/toolbar"/>
 
@@ -14,7 +14,7 @@
 
         <fragment
             android:id="@+id/fragment_listing"
-            android:name="com.esoxjem.movieguide.listing.MoviesListingFragment"
+            android:name="com.example.movieguide.app.fragment.MoviesListingFragment"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
