--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,13 +3,13 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context=".listing.MoviesListingActivity">
+              tools:context=".app.activity.MoviesListingActivity">
 
     <include layout="@layout/toolbar"/>
 
     <fragment
         android:id="@+id/fragment_listing"
-        android:name="com.esoxjem.movieguide.listing.MoviesListingFragment"
+        android:name="com.example.movieguide.app.fragment.MoviesListingFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout="@layout/fragment_movies"/>
