--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".details.MovieDetailsActivity">
+    tools:context=".app.activity.MovieDetailsActivity">
 
     <FrameLayout
         android:id="@+id/movie_details_container"
