--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".listing.MoviesListingFragment">
+             tools:context=".app.fragment.MoviesListingFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/movies_listing"
