feat(modules): update default color in main apps

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#333333</color>
-    <color name="colorPrimaryDark">#1e1e1e</color>
-    <color name="colorAccent">#ffc701</color>
+    <color name="colorPrimary">#EC407A</color>
+    <color name="colorPrimaryDark">#EC407A</color>
+    <color name="colorAccent">#9C27B0</color>
 
     <color name="black_translucent_60">#99000000</color>
 
-    <color name="window_background">#282828</color>
+    <color name="window_background">#fafafa</color>
 </resources>
