--- a/app/src/main/res/layout/movie_grid_item.xml
+++ b/app/src/main/res/layout/movie_grid_item.xml
@@ -1,38 +1,106 @@
-<FrameLayout
-    android:id="@+id/movie_container"
+<FrameLayout android:id="@+id/movie_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="320dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:clickable="true"
-    android:layout_margin="1dp"
-    android:foreground="?attr/selectableItemBackground">
+    android:clipToPadding="true"
+    android:layout_margin="5dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/movie_poster"
+    <android.support.v7.widget.CardView
+        android:id="@+id/movie_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
+        android:background="#fff"
+        app:cardCornerRadius="5dp"
+        app:cardUseCompatPadding="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:clickable="true"
+        >
 
-    <View
-        android:id="@+id/title_background"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_gravity="bottom"
-        android:alpha="0.8"
-        android:background="@color/colorPrimaryDark"
-        android:gravity="center"/>
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="10dp">
 
-    <TextView
-        android:id="@+id/movie_name"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_gravity="bottom"
-        android:gravity="center"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:textColor="@android:color/white"
-        android:textSize="12sp"/>
+            <ImageView
+                android:id="@+id/movie_poster"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:background="#ddd"
+                android:scaleType="centerCrop"
+                tools:ignore="MissingConstraints" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:background="@drawable/ic_gradient"
+                tools:ignore="MissingConstraints" />
+
+            <TextView
+                android:id="@+id/movie_name"
+                android:layout_width="match_parent"
+                android:layout_height="42dp"
+                android:text="title"
+                android:gravity="center"
+                android:textColor="@android:color/black"
+                android:fontFamily="@font/muli_heading"
+                android:textSize="16dp"
+                android:layout_margin="10dp"
+                app:layout_constraintTop_toBottomOf="@id/movie_poster"
+                tools:ignore="MissingConstraints" />
+
+            <ImageView
+                android:id="@+id/movie_icon_rating"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginTop="15dp"
+                android:src="@drawable/ic_rating"
+                app:layout_constraintTop_toBottomOf="@id/movie_name"
+                app:layout_constraintLeft_toLeftOf="@id/movie_name"
+                tools:ignore="MissingConstraints" />
+
+            <TextView
+                android:id="@+id/movie_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:text="title"
+                android:fontFamily="@font/muli"
+                android:textColor="@android:color/black"
+                android:textSize="12dp"
+                app:layout_constraintLeft_toLeftOf="@id/movie_icon_rating"
+                app:layout_constraintTop_toTopOf="@id/movie_icon_rating"
+                app:layout_constraintBottom_toBottomOf="@id/movie_icon_rating"
+                tools:ignore="MissingConstraints" />
+
+            <ImageView
+                android:id="@+id/movie_icon_release"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="15dp"
+                android:src="@drawable/ic_release"
+                app:layout_constraintTop_toBottomOf="@id/movie_name"
+                app:layout_constraintLeft_toRightOf="@id/movie_rating"
+                tools:ignore="MissingConstraints" />
+
+            <TextView
+                android:id="@+id/movie_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="title"
+                android:fontFamily="@font/muli"
+                android:textColor="@android:color/black"
+                android:textSize="12dp"
+                app:layout_constraintTop_toTopOf="@id/movie_icon_release"
+                app:layout_constraintBottom_toBottomOf="@id/movie_icon_release"
+                app:layout_constraintLeft_toRightOf="@id/movie_icon_release"
+                tools:ignore="MissingConstraints" />
+
+        </android.support.constraint.ConstraintLayout>
+
+    </android.support.v7.widget.CardView>
+
 
 </FrameLayout>
