--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -7,6 +7,7 @@
     android:layout_height="?attr/actionBarSize"
     android:layout_alignParentTop="true"
     android:background="@color/colorPrimary"
+    app:titleMarginStart="32dp"
     android:elevation="4dp"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     app:theme="@style/AppTheme.Toolbar"/>
