--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -59,7 +59,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 android:textSize="32sp"/>
 
             <TextView
@@ -70,7 +70,7 @@
                 android:layout_marginRight="16dp"
                 android:fontFamily="sans-serif-light"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@android:color/white"/>
+                android:textColor="@android:color/black"/>
 
             <TextView
                 android:id="@+id/movie_rating"
@@ -80,7 +80,7 @@
                 android:layout_marginRight="16dp"
                 android:fontFamily="sans-serif-light"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@android:color/white"/>
+                android:textColor="@android:color/black"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -90,7 +90,7 @@
                 android:layout_marginTop="32dp"
                 android:text="@string/summary"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                android:textColor="@android:color/white"/>
+                android:textColor="@android:color/black"/>
 
             <TextView
                 android:id="@+id/movie_description"
@@ -100,7 +100,7 @@
                 android:fontFamily="sans-serif-light"
                 android:lineSpacingMultiplier="1.2"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textColor="@android:color/white"/>
+                android:textColor="@android:color/black"/>
 
             <include
                 layout="@layout/trailers_and_reviews"
