--- a/app/src/main/res/layout/trailers_and_reviews.xml
+++ b/app/src/main/res/layout/trailers_and_reviews.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:text="@string/trailers"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:visibility="gone"/>
 
     <HorizontalScrollView
@@ -34,7 +34,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/reviews"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:visibility="gone"/>
 
     <LinearLayout
