feat(modules): update font family in detail movie

--- a/app/src/main/res/layout-sw600dp-land/fragment_movie_details.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_movie_details.xml
@@ -50,7 +50,9 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
+                android:fontFamily="@font/muli_heading"
                 android:textColor="@android:color/black"
+                android:text="title"
                 android:textSize="32sp"/>
 
             <TextView
@@ -59,7 +61,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/muli"
+                android:text="2019"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@android:color/black"/>
 
@@ -69,7 +72,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/muli"
+                android:text="9.5 / 10"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@android:color/black"/>
 
@@ -79,6 +83,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
+                android:fontFamily="@font/muli_heading"
                 android:text="@string/summary"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textColor="@android:color/black"/>
@@ -88,9 +93,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/muli"
                 android:lineSpacingMultiplier="1.2"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:text="description"
                 android:textColor="@android:color/black"/>
 
             <include
