--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="black_translucent_60">#99000000</color>
 
     <color name="window_background">#fafafa</color>
+    <color name="colorHeading">#DE000000</color>
+    <color name="colorSubHeading">#4a4a4a</color>
+    <color name="colorText">#9b9b9b</color>
+    <color name="dotInactive">#80dddddd</color>
+    <color name="dotActive">#ddd</color>
 </resources>
